--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
   "require": {
     "php": ">=5.4",
     "ext-phalcon": ">=2.0.9",
-    "ext-swoole": ">=1.9",
-    "opis/closure": "^3.0"
+    "ext-swoole": ">=1.9"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "~2.7",
@@ -32,7 +31,6 @@
   "autoload-dev": {
     "psr-4": {
       "App\\Test\\Unit\\": "tests/unit/"
-    },
-    "files": ["functions.php"]
+    }
   }
 }
