--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -11,19 +11,10 @@ dbname   = phalcon_demo
 ; Related to the document root
 controllersDir = app/controllers/
 modelsDir      = app/models/
-viewsDir       = app/views/
 pluginsDir     = app/plugins/
-formsDir       = app/forms/
-libraryDir     = app/library/
 baseUri        = /
 migrationsDir  = app/migrations/
 
-[volt]
-; Related to the document root
-cacheDir       = cache/volt/
-compiledExt    = .php
-separator      = _
-
-[memcacge]
+[memcache]
 host = 127.0.0.1
 port = 11211
