--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -5,13 +5,14 @@ adapter  = MySql
 host     = localhost
 username = root
 password = goodluck888
-dbname   = phalcon_demo
+dbname   = tt_demo
 
 [application]
 ; Related to the document root
 controllersDir = app/controllers/
 modelsDir      = app/models/
 pluginsDir     = app/plugins/
+libraryDir     = library/
 baseUri        = /
 migrationsDir  = app/migrations/
 
