--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -12,6 +12,7 @@ dbname   = tt_demo
 controllersDir = app/controllers/
 modelsDir      = app/models/
 pluginsDir     = app/plugins/
+logicsDir      = app/logics/
 libraryDir     = library/
 baseUri        = /
 migrationsDir  = app/migrations/
